2005-02-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* material.h: Add UniaxialMaterial.
	* camfr_wrap.cpp: Ditto.

2005-02-02  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* bloch.h: Add support for BlochStacks inside of other Stacks.
	* bloch.cpp: Ditto.
	* interface.h: Ditto.
	* interface.cpp: Ditto.
	* stack.cpp: Ditto.
	* stack.h: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-01-28  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add switches for ASR solver.
	* defs.h: Ditto.

2004-10-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry.py: Add switch to calculate average eps and 1/eps.

2004-08-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add switch for Davy.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2004-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.py: Add 'set_keep_all_estimates'.

2004-06-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry3d.py: Fix rounding errors.

2004-06-03  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* field.cpp: Don't propagate inside a BlochStack.
	* icache.cpp: Don't make flipped scatterers for BlochStacks.

2004-06-03  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* geometry3d.py: New file.
	* geometry.py: Add compare functions.

2004-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* S_scheme_fields.cpp: Fix transparent scatterers for MonoStacks.

2004-04-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* field.cpp: Detect and fix overflow.

2004-04-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Lambda can now be complex.
	* defs.h: Ditto.
	* material.h: Ditto.
	* cavity.cpp: Ditto.

2004-02-12  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry.py: Relax tolerance.

2003-12-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Wrap mode_correction enum.

2003-12-04  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* mode.h: Remove wrapper.

2003-12-04  Peter Bienstman  <Peter.Bienstman@ugent.be>
