@@ -1,3 +1,8 @@
+2005-02-08  Pieter Dumon  <Pieter.Dumon@UGent.be>
+
+	* bloch.cpp: Better detection of fw/bw modes.
+	* infstack.cpp: Ditto.
+
 2005-02-04  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* material.h: Add UniaxialMaterial.
